--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ p {
     margin: 10vh;
 }
 nav {
-    background: rgb(61, 97, 255);
+    background: red;
 }
 .navbar-brand{
     margin-right: 50vh;
