--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ p {
     margin: 10vh;
 }
 nav {
-    background: green;
+    background: rgb(21, 70, 134);
 }
 .navbar-brand{
     margin-right: 50vh;
